--- a/kubernetes/config/worker-ubuntu16-04.yaml
+++ b/kubernetes/config/worker-ubuntu16-04.yaml
@@ -2,14 +2,12 @@ apiVersion: v1
 data:
   worker-ubuntu16-04.jsonnet: |
     local common = import 'common.libsonnet';
-
     {
-      blobstore: common.blobstore,
+      blobstore: common.blobstoreStorage,
       maximumMessageSizeBytes: common.maximumMessageSizeBytes,
       scheduler: { address: 'scheduler:8983' },
-      httpListenAddress: common.httpListenAddress,
+      global: common.global,
       maximumMemoryCachedDirectories: 1000,
-      instanceName: 'remote-execution',
       browserUrl: common.browserUrl,
       buildDirectories: [{
         native: {
@@ -25,11 +23,9 @@ data:
           platform: {
             properties: [
               { name: 'OSFamily', value: 'Linux' },
-              { name: 'container-image', value: 'docker://marketplace.gcr.io/google/rbe-ubuntu16-04@sha256:b516a2d69537cb40a7c6a7d92d0008abb29fba8725243772bdaf2c83f1be2272' },
+              { name: 'container-image', value: 'docker://l.gcr.io/google/rbe-ubuntu16-04@sha256:f6568d8168b14aafd1b707019927a63c2d37113a03bcee188218f99bd0327ea1' },
             ],
           },
-          defaultExecutionTimeout: '1800s',
-          maximumExecutionTimeout: '3600s',
           workerId: {
             'pod': std.extVar("POD_NAME"),
             'node': std.extVar("NODE_NAME")
@@ -37,7 +33,6 @@ data:
         }],
       }],
     }
-
 kind: ConfigMap
 metadata:
   name: worker-ubuntu16-04
